Fixed overflow

--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -2,8 +2,8 @@
 
 #gradient-canvas {
   position: absolute;
-  width: 110vw;
-  height: 110vh;
+  width: 100vw;
+  height: 100vh;
   top: 0;
   left: 0;
 
